--- a/.github/workflows/lambda.yaml
+++ b/.github/workflows/lambda.yaml
@@ -1,23 +1,29 @@
+name: Lambda function deployement
+
 on:
   push:
     branches:
       - main
+
+env:
+  AWS_REGION: us-east-2
+
 jobs:
-  build-deploy:
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: aws-actions/setup-sam@v1
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ##region##
-      # sam build 
-      - run: sam build --use-container
+    - name: Checkout
+      uses: actions/checkout@v2
 
-# Run Unit tests- Specify unit tests here 
-
-# sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket ##s3-bucket## --capabilities CAPABILITY_IAM --region ##region## 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }} 
+        
+    - name: Run script
+      run: bash ./CID/deployReactS3.sh
