--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -13,11 +13,17 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: AWS
+    
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Configure NodeJS
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
